Ajustes para nómina extraordinaria.